<resources>
    <string name="app_name">Foody Donating App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="track">Track</string>
    <string name="home">Home</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="share">share</string>
    <string name="comments">comments</string>
    <string name="felt_good_after_denotinting_food_to_the_needy_people_the_happiness_on_their_face_was_priceless">Felt good after denotinting food to the needy people. The happiness on their face was priceless</string>
    <string name="farida">Farida</string>
    <string name="_20_mins_ago">20 mins ago</string>
    <string name="mins_ago">mins ago</string>
    <string name="_20">20</string>
    <string name="todo">TODO</string>
    <string name="items_detail">Items/detail</string>
    <string name="abs_restaurant">ABs Restaurant</string>
    <string name="_4_kgs_of_rice_daal_and_curd">4 kgs of rice,daal and curd</string>
    <string name="to">To</string>
    <string name="save_food_ngo">Save food NGO</string>
    <string name="pickup_day">Pickup Day</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="_7am_9am">7am - 9am</string>
    <string name="_10am_12pm">10am-12pm</string>
    <string name="_1pm_3pm">1pm - 3pm</string>
    <string name="_4pm_6pm">4pm - 6pm</string>
    <string name="_7pm_9pm">7pm - 9pm</string>
    <string name="add_photos">Add Photos</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="dayafter">Day After</string>
    <string name="confirm">Confirm</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_fb">Sign In with fb</string>
    <string name="sign_in_with_g">sign in with G</string>
    <string name="sign_in_with_phone">sign in with phone</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="pickups">Pickups</string>
    <string name="didn_t_receive_otp">Didn\'t receive OTP?</string>
    <string name="_91">+91</string>
    <string name="pickup_details">Pickup Details</string>
</resources>