<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="#FFFFFF"

    android:orientation="vertical"
    tools:context=".donate_fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white">


        <ImageView
            android:id="@+id/backButtonImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#884B7B"
            android:src="@drawable/backarrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.471" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Donation Detail"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/backButtonImg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/notification"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pick up Location"
            android:textSize="16sp"
            android:textColor="#884B7B" />

        <EditText
            android:id="@+id/donateLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/abs_restaurant"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="@string/items_detail"
            android:textColor="#884B7B" />


        <EditText
            android:id="@+id/donateitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_4_kgs_of_rice_daal_and_curd"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="@string/to"
            android:textColor="#884B7B" />

        <EditText
            android:id="@+id/toNgo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/save_food_ngo"
            android:inputType="text"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="@string/pickup_day"
            android:textColor="#884B7B" />

        <RadioGroup
            android:id="@+id/radioGroup8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/todayDonation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/today"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/tommorowDonation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/tomorrow"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/dayAfterDonation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/dayafter"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RadioGroup>


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="@string/pickup_time"
            android:textColor="#884B7B" />

        <LinearLayout
            android:id="@+id/linearLayout13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/firsttime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:paddingTop="10dp"
                android:textColor="@color/black"
                android:paddingBottom="10dp"
                android:text="@string/_7am_9am"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/secondtime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:background="@drawable/shape"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/_10am_12pm"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/thirdTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:background="@drawable/shape"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/_1pm_3pm"
                android:textAlignment="center"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fourthTime"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:background="@drawable/shape"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/_4pm_6pm"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/fifthTime"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/shape"
                android:paddingTop="10dp"
                android:textColor="@color/black"
                android:paddingBottom="10dp"
                android:text="@string/_7pm_9pm"
                android:textAlignment="center"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:text="@string/add_photos"
            android:textColor="#884B7B" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/add_img"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"

                android:src="@drawable/add_image" />

            <ImageView
                android:id="@+id/image_food1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="5dp"

                android:src="@drawable/food1" />

            <ImageView
                android:id="@+id/image_food2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/food2" />

            <ImageView
                android:id="@+id/image_food3"
                android:layout_width="40dp"
                android:layout_height="40dp"

                android:src="@drawable/food3" />


        </LinearLayout>






    </LinearLayout>

    <Button
        android:id="@+id/confirmDoantoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape"
        android:layout_margin="5dp"
        android:text="@string/confirm"
        android:textColor="#884B7B"
        android:drawableRight="@drawable/confirm"
        />

</LinearLayout>