<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    tools:context=".SignIn">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="@color/yellow"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/poor"

            android:scaleType="centerCrop"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:drawableStart="@drawable/person"
            android:drawablePadding="12dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#A29F9F" />

        <EditText

            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape"
            android:drawableStart="@drawable/password"
            android:drawablePadding="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#A29F9F" />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"

            android:layout_marginTop="15dp"
            android:text="@string/forgot_password"
            android:textColor="#7F4C73"
            android:textSize="15sp" />

        <Button
            android:id="@+id/SignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/pink"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="or"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/SignWithGoogle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="5dp"
                android:background="@drawable/shape"
                android:backgroundTint="@color/white"
                android:drawableEnd="@drawable/google"
                android:gravity="center"
                android:padding="7dp"
                android:text="Sign In with"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/SignWithFb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:elevation="5dp"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:backgroundTint="@color/white"

                android:drawableEnd="@drawable/facebook"
                android:gravity="center"
                android:padding="7dp"
                android:text="Sign In With"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/SignInWithphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:elevation="5dp"
            android:background="@drawable/shape"
            android:drawableEnd="@drawable/smartphone"
            android:backgroundTint="@color/white"
            android:padding="7dp"
            android:text="@string/sign_in_with_phone"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"

            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"

                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:padding="5dp"
                android:text="@string/sign_up"
                android:elevation="10dp"
                android:textColor="#7F4C73"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>